# ChangeLog for kde-base/kdemultimedia-kioslaves
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.155 2010/03/11 18:33:47 ranger Exp $

  11 Mar 2010; Brent Baude <ranger@gentoo.org>
  kdemultimedia-kioslaves-4.3.5.ebuild:
  Marking kdemultimedia-kioslaves-4.3.5 ppc stable for bug 300393

*kdemultimedia-kioslaves-4.4.1 (02 Mar 2010)

  02 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdemultimedia-kioslaves-4.4.1.ebuild:
  Version bump

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  kdemultimedia-kioslaves-4.3.5.ebuild:
  amd64/x86 stable wrt #300393

*kdemultimedia-kioslaves-4.4.0 (08 Feb 2010)

  08 Feb 2010; Alexey Shvetsov <alexxy@gentoo.org>
  +kdemultimedia-kioslaves-4.4.0.ebuild:
  Version bump to KDE SC 4.4.0

*kdemultimedia-kioslaves-4.3.5 (25 Jan 2010)

  25 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +kdemultimedia-kioslaves-4.3.5.ebuild:
  Version bump

  22 Jan 2010; Jonathan Callen <abcd@gentoo.org>
  kdemultimedia-kioslaves-4.3.4.ebuild:
  Keyword ~amd64-linux/~x86-linux

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  kdemultimedia-kioslaves-4.3.3.ebuild:
  Stable for HPPA too.

  22 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  kdemultimedia-kioslaves-4.3.4.ebuild:
  Pull in changes from overlay

  10 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdemultimedia-kioslaves-4.3.1.ebuild:
  Drop KDE SC-4.3.1.

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  kdemultimedia-kioslaves-4.3.3.ebuild:
  x86 stable, bug 292455

*kdemultimedia-kioslaves-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org>
  +kdemultimedia-kioslaves-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  kdemultimedia-kioslaves-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  kdemultimedia-kioslaves-4.3.3.ebuild:
  Add ~sparc
