@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdemultimedia-kioslaves
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.155 2010/03/11 18:33:47 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.156 2010/03/30 20:45:15 spatz Exp $
+
+*kdemultimedia-kioslaves-4.4.2 (30 Mar 2010)
+
+  30 Mar 2010; Dror Levin <spatz@gentoo.org>
+  +kdemultimedia-kioslaves-4.4.2.ebuild:
+  Version bump
 
   11 Mar 2010; Brent Baude <ranger@gentoo.org>
   kdemultimedia-kioslaves-4.3.5.ebuild:
